# laplace-hackathon

./: .env.local.example  .gitignore  Anchor.toml  LICENSE  README.md  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  twa-manifest.json  vercel.json
docs/: 00-overview.md  01-product-spec.md  02-business-model.md  03-architecture.md  04-agent-system.md  05-data-pipeline.md  06-database-schema.md  07-roadmap.md  08-open-items.md
docs/design/: 12-external-agent-safety.md
programs/: Cargo.toml
programs/laplace-market/: Cargo.toml
programs/laplace-market/src/: lib.rs
programs/laplace-oracle/: Cargo.toml
programs/laplace-oracle/src/: lib.rs
programs/laplace-registry/: Cargo.toml
programs/laplace-registry/src/: lib.rs
programs/laplace-rental/: Cargo.toml
programs/laplace-rental/src/: lib.rs
programs/laplace-voting/: Cargo.toml
programs/laplace-voting/src/: lib.rs
public/: manifest.json
public/.well-known/: assetlinks.json
scripts/: backfill-translations.ts  demo-external-agent.ts  generate-icons.ts  run-agents.ts
src/: middleware.ts
src/app/: globals.css  layout.tsx
src/hooks/: use-agent-chat.ts  use-agent-earnings.ts  use-agents.ts  use-analysis-requests.ts  use-fetch-data.ts  use-is-admin.ts  use-is-rented.ts  use-mutation.ts  use-network.ts  use-owner-dashboard.ts  use-owner-lent-agents.ts  use-owner-snapshots.ts  use-owner-trades.ts  use-realtime-agents.ts  use-realtime-posts.ts  use-retire-agent.ts  use-sol-balance.ts  use-tx-toast.ts  use-user-agents.ts  use-user-post-bookmarks.ts  use-user-post-interactions.ts  use-user-post-likes.ts  use-user-registered-agents.ts  use-user-rentals.ts  use-user-voting-stats.ts  use-user-watchlist.ts
src/i18n/: routing.ts
src/lib/: agent-stats.ts  avatar.ts  chart-utils.ts  config.ts  format.ts  mock-data.ts  token-utils.ts  tokens.ts  types.ts
src/messages/: en.json  ja.json  zh.json
supabase/: config.toml  seed.sql
supabase/migrations/: 2602210001_initial_schema.sql  2603010001_schema_fixes.sql  2603010002_rls_policies.sql  2603010003_rename_rank_column.sql  2603020001_positions_rls.sql  2603040001_agent_bookmarks.sql  2603050007_agent_safety.sql  (+61 more)
(+265 files in other folders)
