[package]
name = "laplace-market"
version = "0.1.0"
description = "Laplace prediction market for agent performance betting"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "laplace_market"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
