[package]
name = "laplace-oracle"
version = "0.1.0"
description = "Laplace prediction recording and resolution oracle"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "laplace_oracle"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
