[package]
name = "laplace-registry"
version = "0.1.0"
description = "Laplace on-chain agent registry and scoring"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "laplace_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
