[package]
name = "laplace-rental"
version = "0.1.0"
description = "Laplace agent subscription and rental marketplace"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "laplace_rental"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
